[v9r2p4]
use DIRAC v6r20p11

* RSS: FreeDiskSpace fixed to use only srm endpoints

[v9r2p3]
use DIRAC v6r20p11

* dirac-architecture script will send a mail when no suitable DIRAC platform is found
* taking number of processors allocated to the job from MJF
* removed useless check of SoftwareDistribution section
* TS: allow to set empty list as SE parameters
* restored tests
* fix wrong query

[v9r2p2]
* TransformationDebug: use FTS3Cient
* corrected comparison of input/output file types
* removed unused wf parameter
* Few fixes for MC ReDecay requests 1. Ban list of sites (BOINC for example) 2. Limit number of events in MC simulation
* fix for GDB invocation
* CI: some fixes for test job input files
* CI: corrected totally wrong step
* CI: host and port, not username and pwd...

[v9r2p1]
use DIRAC v6r20p7

* fix for Workflow/ModuleBase

[v9r2]
use DIRAC v6r20p7

* delete pilot syncronizer, because it is in DIRAC
* set PYCURL_SSL_LIBRARY
* handle correctly the case when some parameter is missing
* correct the file path
* added try/except for incomplete requests
* fix for NoneType
* improve printout
* better format + new option --Parameters
* protect against exception opening XML summary
* fix visibility for removal transformations
* increase the size of the file type
* fix getMaxFilesToReplicate (disabling throttling to tape SEs)
* print BK query timing in all cases
* make a single query for a list of prods or event types
* avoid nDatasets==0
* Release locks in ProductionRequestDB.py when file type checks fail
* Fix outdated comments in ProductionRequestDB.py
* Require any previous step to have created a suitable input
* Move file type check so that pre-existing bad productions can still be updated
* Remove redundant cPickle.load in ProductionRequestDB
* Check input and output file types match when creating/updating production requests
* installing libcurl-devel
* removed UsersAndGroups.py
* several fixes to adapt to DIRAC v6r20
* remove old BOINC host