@@ -1,3 +1,9 @@
+[v9r3-pre1]
+use DIRAC v6r20p11
+
+* Worfklow: calculating output names at runtime to enable parametric jobs
+* Added ElasticDB for MC statistics
+
 [v9r2p4]
 use DIRAC v6r20p11
 
